unpackaged/main/default/objects/Account/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <inlineHelpText>Determines the type of Parent Account. This is not the same as Membership Type. Default is None. Must be populated manually.</inlineHelpText>
    <label>Parent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsoring Organization</fullName>
            </value>
            <value>
                <fullName>Licensing Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>