unpackaged/main/default/objects/Account/fields/Potential_Affiliate_Member__c.field-meta.xml
<CustomField>
    <fullName>Potential_Affiliate_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Affiliate Member</label>
    <type>Checkbox</type>
</CustomField>