unpackaged/main/default/objects/Account/fields/Presentment_Location_for_Rule_9_Claims__c.field-meta.xml
<CustomField>
    <fullName>Presentment_Location_for_Rule_9_Claims__c</fullName>
    <inlineHelpText>Appears in the Exceptions Contact Directory</inlineHelpText>
    <label>Presentment Location for Rule 9 Claims</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>