unpackaged/main/default/objects/Account/fields/Primary_Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_City__c</fullName>
    <formula>OrderApi__Primary_Contact__r.MailingCity</formula>
    <label>Primary Contact Mailing City</label>
    <type>Text</type>
</CustomField>