unpackaged/main/default/objects/Account/fields/Primary_Contact_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_Postal_Code__c</fullName>
    <formula>OrderApi__Primary_Contact__r.MailingPostalCode</formula>
    <label>Primary Contact Mailing Postal Code</label>
    <type>Text</type>
</CustomField>