unpackaged/main/default/objects/Account/fields/Primary_Contact_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_State__c</fullName>
    <formula>OrderApi__Primary_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Mailing State</label>
    <type>Text</type>
</CustomField>