unpackaged/main/default/objects/Account/fields/Primary_Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_Street__c</fullName>
    <formula>OrderApi__Primary_Contact__r.MailingStreet</formula>
    <label>Primary Contact Mailing Street</label>
    <type>Text</type>
</CustomField>