unpackaged/main/default/objects/Account/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>OrderApi__Primary_Contact__r.FirstName + &#39; &#39; + OrderApi__Primary_Contact__r.LastName</formula>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>