unpackaged/main/default/objects/Account/fields/Primary_Contact_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Work_Phone__c</fullName>
    <formula>OrderApi__Primary_Contact__r.OrderApi__Work_Phone__c</formula>
    <label>Primary Contact Work Phone</label>
    <type>Text</type>
</CustomField>