unpackaged/main/default/objects/Account/fields/Primary_R_T_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_T_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>i.e. 9 digits only, no formatting</inlineHelpText>
    <label>Primary RT Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>