unpackaged/main/default/objects/Account/fields/Private_Adj_List__c.field-meta.xml
<CustomField>
    <fullName>Private_Adj_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user will be sent an email via TCH&#39;s Marketing Platform</inlineHelpText>
    <label>Private Adj List</label>
    <type>Checkbox</type>
</CustomField>