unpackaged/main/default/objects/Account/fields/Public_Adj_List__c.field-meta.xml
<CustomField>
    <fullName>Public_Adj_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the following information will appear on the General Adjustment Contact Directory</inlineHelpText>
    <label>Exceptions Contact Directory</label>
    <type>Checkbox</type>
</CustomField>