unpackaged/main/default/objects/Account/fields/Rate_2__c.field-meta.xml
<CustomField>
    <fullName>Rate_2__c</fullName>
    <label>Rate 2</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>