unpackaged/main/default/objects/Account/fields/Rate_Override__c.field-meta.xml
<CustomField>
    <fullName>Rate_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To override the automatic deposit-based calculations</description>
    <inlineHelpText>Checking this will look for alternative values (see field: Override Annual Dues) for deposit-based billing</inlineHelpText>
    <label>Rate Override</label>
    <type>Checkbox</type>
</CustomField>