unpackaged/main/default/objects/Account/fields/Rate_Override_Expires__c.field-meta.xml
<CustomField>
    <fullName>Rate_Override_Expires__c</fullName>
    <description>Rate Override Expires</description>
    <label>Rate Override Expires</label>
    <type>Date</type>
</CustomField>