unpackaged/main/default/objects/Account/fields/Relationship_is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Relationship_is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relationship is Archived</label>
    <type>Checkbox</type>
</CustomField>