unpackaged/main/default/objects/Account/fields/Rule_9_Cancel_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Rule_9_Cancel_Opt_Out__c</fullName>
    <description>Date Member Org Canceled Opt out of Rule 9</description>
    <inlineHelpText>Date Member Org Canceled Opt out of Rule 9</inlineHelpText>
    <label>Rule 9 Cancel Opt Out</label>
    <type>Date</type>
</CustomField>