unpackaged/main/default/objects/Account/fields/Rule_9_Opt_Back_In__c.field-meta.xml
<CustomField>
    <fullName>Rule_9_Opt_Back_In__c</fullName>
    <description>Date Member Org opted out of Rule 9</description>
    <inlineHelpText>Date Member Org opted out of Rule 9</inlineHelpText>
    <label>Rule 9 Opt Out Date</label>
    <type>Date</type>
</CustomField>