unpackaged/main/default/objects/Account/fields/Rule_9_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Rule_9_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked if Member Org has opted out of Rule 9</description>
    <inlineHelpText>Box is checked if Member Org has opted out of Rule 9</inlineHelpText>
    <label>Rule 9 Opt-Out</label>
    <type>Checkbox</type>
</CustomField>