unpackaged/main/default/objects/Account/fields/Save_these_values_as_defaults__c.field-meta.xml
<CustomField>
    <fullName>Save_these_values_as_defaults__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save these values as defaults</label>
    <type>Checkbox</type>
</CustomField>