unpackaged/main/default/objects/Account/fields/Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Name__c</fullName>
    <formula>Name &amp;&#39; (&#39;+ BillingCity &amp; &#39;, &#39; &amp;  BillingState &amp; &#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Name</label>
    <type>Text</type>
</CustomField>