unpackaged/main/default/objects/Account/fields/Sponsored_Organization_Count__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Organization_Count__c</fullName>
    <label>Active Sponsored Organizations</label>
    <summaryFilterItems>
        <field>Sponsoring_Relationships__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Sponsoring_Relationships__c.Sponsoring_Organization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>