unpackaged/main/default/objects/Account/fields/Sponsored_Relationship2__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Relationship2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent 2</label>
    <referenceTo>Sponsoring_Relationships__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>