unpackaged/main/default/objects/Account/fields/Sponsorship_List__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_List__c</fullName>
    <label>Sponsorship List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>