unpackaged/main/default/objects/Account/fields/Suppress_from_Membership_Page__c.field-meta.xml
<CustomField>
    <fullName>Suppress_from_Membership_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>suppresses member from displaying on public membership page</description>
    <inlineHelpText>When checked, this member will not appear on public membership page</inlineHelpText>
    <label>Suppress from Membership Page</label>
    <type>Checkbox</type>
</CustomField>