unpackaged/main/default/objects/Account/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Account is treated as tax-exempt: all Avalara tax calculation is bypassed (no tax estimated at checkout, no transaction committed to Avalara).</description>
    <inlineHelpText>When checked, no sales tax is calculated or charged for orders tied to this Account.</inlineHelpText>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>