unpackaged/main/default/objects/Account/fields/TCH_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>TCH_Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Member</fullName>
            </value>
            <value>
                <fullName>Participating Member</fullName>
            </value>
            <value>
                <fullName>Associate Member</fullName>
            </value>
            <value>
                <fullName>Affiliate Member</fullName>
            </value>
            <value>
                <fullName>Licensed Participant</fullName>
            </value>
            <value>
                <fullName>Sponsored Member</fullName>
            </value>
            <value>
                <fullName>Education Subscriber</fullName>
                <isActive>false</isActive>
                <label>Education Subscriber</label>
            </value>
            <value>
                <fullName>Licensing Organization</fullName>
                <isActive>false</isActive>
                <label>Licensing Organization</label>
            </value>
            <value>
                <fullName>Sponsoring Organization</fullName>
                <isActive>false</isActive>
                <label>Sponsoring Organization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>