unpackaged/main/default/objects/Account/fields/TCH_Owner_Bank__c.field-meta.xml
<CustomField>
    <fullName>TCH_Owner_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCH Owner Bank</label>
    <type>Checkbox</type>
</CustomField>