unpackaged/main/default/objects/Account/fields/Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits__c</fullName>
    <inlineHelpText>The total deposit amount of this Account</inlineHelpText>
    <label>Total Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>