unpackaged/main/default/objects/Account/fields/Total_Deposits_Upload__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits_Upload__c</fullName>
    <label>Total Deposits (Upload)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>