unpackaged/main/default/objects/Account/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <inlineHelpText>*System Generated* The latest volume record uploaded into the &quot;Item Based Upload&quot; Object</inlineHelpText>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>