unpackaged/main/default/objects/Account/fields/X2025_Billing_Quarter_Conversion_Notes__c.field-meta.xml
<CustomField>
    <fullName>X2025_Billing_Quarter_Conversion_Notes__c</fullName>
    <label>2025 Billing Quarter Conversion Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>