unpackaged/main/default/objects/Account/recordTypes/ECCHO_Account.recordType-meta.xml
<RecordType>
    <fullName>ECCHO_Account</fullName>
    <active>true</active>
    <description>An Account which could be a member or non-member, but is not a Sponsoring Organization</description>
    <label>ECCHO Account</label>
    
    
    
    
    
    
    
    
    
</RecordType>