unpackaged/main/default/objects/Account/recordTypes/ECCHO_Account_and_Sponsor_Organization.recordType-meta.xml
<RecordType>
    <fullName>ECCHO_Account_and_Sponsor_Organization</fullName>
    <active>true</active>
    <description>An Account which could be a member or non-member, and IS a Sponsoring Organization</description>
    <label>ECCHO Account and Sponsor Organization</label>
    
    
    
    
    
    
    
    
    
</RecordType>