unpackaged/main/default/objects/Account/listViews/Active_FM.listView-meta.xml
<ListView>
    <fullName>Active_FM</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>TCH_Membership_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>FON_Original_Member_Join_Date__c</columns>
    <columns>Is_Sponsoring_Organization__c</columns>
    <columns>Sponsored_Organization_Count__c</columns>
    <columns>Total_Deposits__c</columns>
    <columns>FON_Fixed_Annual_Dues_PPM_Calculation__c</columns>
    <columns>Override_Annual_Dues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TCH_Membership_Type__c</field>
        <operation>equals</operation>
        <value>Full Member</value>
    </filters>
    <label>Active FM</label>
</ListView>