unpackaged/main/default/objects/Account/listViews/Active_PM.listView-meta.xml
<ListView>
    <fullName>Active_PM</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>TCH_Membership_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>FON_Original_Member_Join_Date__c</columns>
    <columns>Is_Sponsoring_Organization__c</columns>
    <columns>Sponsored_Organization_Count__c</columns>
    <columns>Total_Deposits__c</columns>
    <columns>FON_AsM_PM_Tiered_Annual_Dues__c</columns>
    <columns>Override_Annual_Dues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TCH_Membership_Type__c</field>
        <operation>equals</operation>
        <value>Participating Member</value>
    </filters>
    <label>Active PM</label>
</ListView>