unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>TCH_Membership_Type__c</columns>
    <columns>Sponsored_Organization_Count__c</columns>
    <columns>Is_Sponsoring_Organization__c</columns>
    <columns>DFI_Type__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>