unpackaged/main/default/objects/Account/listViews/Item_Based.listView-meta.xml
<ListView>
    <fullName>Item_Based</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>TCH_Membership_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Sponsored_Organization_Count__c</columns>
    <columns>Fixed_Dues_Calculation__c</columns>
    <columns>FON_Fixed_Rate__c</columns>
    <columns>FON_Fixed_Rate_Parts_per_Million__c</columns>
    <columns>FON_Fixed_Annual_Dues_PPM_Calculation__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FON_Billing_Type__c</field>
        <operation>equals</operation>
        <value>Item Based</value>
    </filters>
    <label>Item-Based</label>
</ListView>