unpackaged/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrderApi__Primary_Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_PARNTER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Org_Account_Hierarchy</label>
</ListView>