unpackaged/main/default/objects/Account/listViews/Sponsoring_Orgs.listView-meta.xml
<ListView>
    <fullName>Sponsoring_Orgs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>TCH_Membership_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Sponsored_Organization_Count__c</columns>
    <columns>Is_Sponsoring_Organization__c</columns>
    <columns>Is_Licensing_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Sponsoring_Organization__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sponsoring Orgs</label>
</ListView>