unpackaged/main/default/objects/Account/listViews/US_Organization_Accounts.listView-meta.xml
<ListView>
    <fullName>US_Organization_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDO_Data_Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <filters>
        <field>GDO_Data_Type__c</field>
        <operation>equals</operation>
        <value>Company</value>
    </filters>
    <label>US - Organization Accounts</label>
</ListView>